sumo/tests/dfrouter/errors/network/edge/root__edge#to__empty1/errors.dfrouter
Error: Missing to-node in edge '1'.
Quitting (on error).
